template for Makefile.in

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,10 +3,9 @@ SUBDIRS = resource license src
 desktopdir = @home@/Desktop
 
 shortcut:
-	cp plexicon.desktop $(desktopdir)/plexicon.desktop
+	cp -f plexicon.desktop $(desktopdir)/plexicon.desktop
 	chown @user@ $(desktopdir)/plexicon.desktop
-	chmod u+rwx $(desktopdir)/plexicon.desktop
-	chmod a+x $(datadir)/plexicon/src/plexicon.py
+	chmod u+x $(desktopdir)/plexicon.desktop
 
 remove-shortcut:
-	rm $(desktopdir)/plexicon.desktop
+	rm -f $(desktopdir)/plexicon.desktop
