--- a/resource/GreySquare/Makefile.am
+++ b/resource/GreySquare/Makefile.am
@@ -7,4 +7,6 @@ icon4_DATA = exit_off.png	\
 	     restart_on.png	\
 	     search.png		\
 	     speaker_off.png	\
-	     speaker_on.png
+	     speaker_on.png	\
+	     database_on.png    \
+	     database_off.png
