--- a/resource/pixmap/Makefile.am
+++ b/resource/pixmap/Makefile.am
@@ -1,5 +1,6 @@
 pixmapdir = $(datadir)/plexicon/resource/pixmap
 
-pixmap_DATA = about.png	\
-	      input.png	\
-	      output.png
+pixmap_DATA = about.png	 \
+	      input.png	 \
+	      output.png \
+	      favourite.png
