--- a/resource/BlueandWhite/Makefile.in
+++ b/resource/BlueandWhite/Makefile.in
@@ -144,7 +144,9 @@ icon3_DATA = exit_off.png	\
 	     restart_on.png	\
 	     search.png		\
 	     speaker_off.png	\
-	     speaker_on.png
+	     speaker_on.png	\
+	     database_on.png    \
+	     database_off.png
 
 all: all-am
 
