--- a/resource/pixmap/Makefile.in
+++ b/resource/pixmap/Makefile.in
@@ -137,9 +137,10 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 user = @user@
 pixmapdir = $(datadir)/plexicon/resource/pixmap
-pixmap_DATA = about.png	\
-	      input.png	\
-	      output.png
+pixmap_DATA = about.png	 \
+	      input.png	 \
+	      output.png \
+	      favourite.png
 
 all: all-am
 
