--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -5,4 +5,5 @@ gui_DATA = buttons.py	\
 	   __init__.py	\
 	   InputGui.py	\
 	   OutputGui.py	\
-	   spinner.py
+	   spinner.py	\
+	   favourite.py
