--- a/src/gui/Makefile.in
+++ b/src/gui/Makefile.in
@@ -142,7 +142,8 @@ gui_DATA = buttons.py	\
 	   __init__.py	\
 	   InputGui.py	\
 	   OutputGui.py	\
-	   spinner.py
+	   spinner.py	\
+	   favourite.py
 
 all: all-am
 
