--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -159,7 +159,8 @@ app_DATA = plexicon.py	\
 	   interface.py \
 	   path.py	\
 	   tts.py	\
-	   sound.py
+	   sound.py \
+	   database.py
 
 bin_SCRIPTS = plexicon
 all: all-recursive
